<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.Activities.MainLoginActivity">
<data>
    <variable
        name="loginVM"
        type="com.example.recomendationsystem.viewmodels.LoginViewModel" />
</data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView android:id="@+id/loginTextView"
            style="@style/loginRegisterHeaderStyle"
            android:text="@string/loginTextView"
            app:layout_constraintTop_toTopOf="@+id/loginGuideLine"
            app:layout_constraintStart_toStartOf="@+id/loginLeftMarginGuideline"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id"
            style="@style/textInputLayoutStyle"
            android:hint="@string/emailText"
            app:layout_constraintStart_toStartOf="@id/loginLeftMarginGuideline"
            app:layout_constraintEnd_toStartOf="@id/loginRightMarginGuideline"
            app:layout_constraintTop_toBottomOf="@id/loginTextView"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id2"
                style="@style/extendedEditeTextStyle"
                android:drawableStart="@drawable/ic_email_register"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/registerationButtonStyle"
            android:text="@string/signInText"
            app:layout_constraintTop_toBottomOf="@id/id"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintStart_toStartOf="@+id/loginLeftMarginGuideline"
            app:layout_constraintEnd_toStartOf="@+id/loginRightMarginGuideline"/>

        <TextView android:id="@+id/loginRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="@id/loginMidleGuideLine"
            android:text="@string/signInRegisterText"
            android:textColor="@color/colorAccent"
            style="@style/registerationTextView"

            android:layout_marginStart="5dp"/>

        <TextView android:id="@+id/loginNoAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/loginMidleGuideLine"
            android:text="@string/signInNoAccountText"
            style="@style/registerationTextView"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginMidleGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginLeftSeperatorGuideLine"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginRightSeperatorGuideLine"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginLeftMarginGuideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginRightMarginGuideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>